--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,6 +11,9 @@ Options -Indexes
 	Options +FollowSymlinks
 	RewriteEngine On
 
+	RewriteBase /
+
+
 	# If you installed CodeIgniter in a subfolder, you will need to
 	# change the following line to match the subfolder you need.
 	# http://httpd.apache.org/docs/current/mod/mod_rewrite.html#rewritebase
