--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,7 +11,7 @@ Options -Indexes
 	Options +FollowSymlinks
 	RewriteEngine On
 
-	RewriteBase /
+	RewriteBase /public
 
 
 	# If you installed CodeIgniter in a subfolder, you will need to
